fix(ui): aligned user-circuit-tab and search bar

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -362,7 +362,6 @@
   border-radius: 5px;
   color: $black;
   font-size: 18px;
-  margin-bottom: 20px;
   margin-left: 7px;
   margin-right: 7px;
   margin-top: 20px;
